--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -38,6 +38,11 @@ footer {
   font-family: "Indie Flower", cursive;
 }
 
+footer span {
+  display: block;
+  margin-bottom: 1%;
+}
+
 .footer-link {
   color: #eeeeee;
   text-decoration: none;
