--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -9,6 +9,30 @@
   display: inline-block;
 }
 
+.roll {
+  background-color: #4ecca3;
+  border: none;
+  border-radius: 12px;
+  display: block;
+  cursor: pointer;
+  color: #e81224;
+  font-family: "Lobster", cursive;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 30px auto 10px;
+  padding: 12px 46px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #662828;
+}
+.roll:hover {
+  background-color: #4ecca3;
+  box-shadow: 0px 0px 4px 1px #e81224;
+}
+.roll:active {
+  position: relative;
+  top: 1px;
+}
+
 body {
   background-color: #393e46;
 }
@@ -32,7 +56,7 @@ img {
 }
 
 footer {
-  margin-top: 5%;
+  margin-top: 3%;
   color: #eeeeee;
   text-align: center;
   font-family: "Indie Flower", cursive;
@@ -52,4 +76,13 @@ footer span {
 
 .footer-link:hover {
   color: #4ecca3;
+}
+
+@media only screen and (max-width: 992px) {
+  h1 {
+    font-size: 5rem;
+  }
+  .roll {
+    width: 70%;
+  }
 }
